# smg

./: Cargo.toml
.github/workflows/: e2e-gpu-job.yml  nightly-tau2.yml  pr-test-rust.yml  upstream-sync-check.yml
bindings/python/: Cargo.toml
bindings/python/src/: lib.rs
crates/grpc_client/src/: lib.rs
crates/ic_client/: Cargo.toml  build.rs
crates/ic_client/proto/inferencecache/v1alpha1/: inferencecache.proto
crates/ic_client/src/: lib.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: gossip_controller.rs  gossip_service.rs  kv.rs  lib.rs  service.rs
crates/multimodal/: Cargo.toml
crates/multimodal/src/: lib.rs
crates/reasoning_parser/src/: factory.rs
crates/tool_parser/src/: factory.rs
deploy/helm/smg/: values.yaml
docs/reference/: metrics.md
docs/reference/api/: openai.md
e2e_test/chat_completions/: test_multimodal_rdma.py  test_multimodal_shm.py
e2e_test/infra/: model_specs.py  process_utils.py  worker.py
grpc_servicer/: pyproject.toml
grpc_servicer/smg_grpc_servicer/: metrics.py  mm_shm.py
grpc_servicer/smg_grpc_servicer/sglang/: server.py  servicer.py
grpc_servicer/smg_grpc_servicer/tokenspeed/: __main__.py  server.py  (+2 more)
grpc_servicer/tests/: test_metrics_sidecar.py  test_servicer_metrics_advertise.py
model_gateway/: Cargo.toml
model_gateway/benches/: scheduler_admission.rs  scheduler_load.rs
model_gateway/src/: app_context.rs  main.rs  server.rs  service_discovery.rs
model_gateway/tests/: engine_metrics_grpc_test.rs
scripts/: ci_build_wheel_mm_rdma.sh  ci_install_tokenspeed.sh  ci_install_vllm.sh  run_epd_local.sh
(+49 files in other folders)
